# cuda-profile

./: .gitignore  CMakeLists.txt  README.md  asset-manifest.json  compile.sh  general.h  index.html  json.worker.js  kernel.cu  manifest.json  proto-bundle.js  protobuf.worker.js  service-worker.js  todo.txt
collection/: .dockerignore  CMakeLists.txt  Dockerfile  README  README.md  compile.sh  kernel.cu  main.cpp  todo.txt
collection/benchmark/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  benchmark.py  compile.py  main.cpp
collection/benchmark/samples/: vectorAdd.cu
collection/benchmark/samples/Mandelbrot/: Mandelbrot.cpp  Mandelbrot_cuda.cu
collection/benchmark/samples/reduction/: reduction.cpp  reduction_kernel.cu
collection/benchmark/samples/simpleGL/: simpleGL.cu
collection/benchmark/samples/vectorAdd/: vectorAdd.cu
collection/device/: CMakeLists.txt  CuprRuntime.h  Runtime.h
collection/include/: CuprRuntime.h
collection/instrument/: CMakeLists.txt  Context.h  Parameters.cpp  Parameters.h  Pass.cpp  Pass.h  RegisterPass.cpp
collection/instrument/emit/: Kernel.cpp  Kernel.h  KernelInit.cpp  KernelInit.h  KernelLaunch.h  MemoryAccess.cpp  MemoryAccess.h  MemoryAlloc.cpp  RuntimeEmitter.cpp  RuntimeEmitter.h
collection/instrument/util/: AddressSpaceResolver.cpp  AddressSpaceResolver.h  DebugExtractor.cpp  DebugExtractor.h  DebugInfo.cpp  DebugInfo.h  Demangler.cpp  FunctionContentLoader.cpp  FunctionContentLoader.h  LLVMAddressSpace.h  Mapper.h  RegexFilter.cpp  RegexFilter.h  StringUtils.cpp  TypeMapper.cpp  TypeMapper.h  Types.cpp  Types.h
collection/memtracker/: CMakeLists.txt  memtracker.cpp
collection/runtime/: AccessRecord.h  AddressSpace.h  AllocRecord.h  CMakeLists.txt  CudaTimer.cpp  CudaTimer.h  DeviceDimensions.h  Emitter.cpp  Emitter.h  Formatter.cpp  Formatter.h  Init.cpp  KernelContext.h  Parameters.cpp  Parameters.h  Runtime.h  RuntimeState.cpp  RuntimeState.h  Utility.h  cudautil.h  format.h  memtracker.cpp  memtracker.h  picojson.h  prefix.h
collection/runtime/format/: CapnpTraceFormatter.cpp  CapnpTraceFormatter.h  Emitter.cpp  Emitter.h  Formatter.cpp  Formatter.h  JsonTraceFormatter.cpp  JsonTraceFormatter.h  ProtobufTraceFormatter.cpp  ProtobufTraceFormatter.h  Trace.cpp  Trace.h  TraceFormatter.cpp  TraceFormatter.h
collection/runtime/format/json/: json_helper.h
collection/runtime/format/protobuf/: alloc-record.proto  dim3.proto  kernel-trace.proto  memory-access.proto
collection/runtime/format/warp/: Warp.cpp  Warp.h  WarpGrouper.cpp  WarpGrouper.h
collection/runtime/format/worker/: format-pool.cpp  format-pool.h
collection/runtime/protobuf/: alloc-record.proto  kernel-invocation.proto  memory-access.proto
collection/runtime/tracedata/: AccessRecord.h  AddressSpace.h  AllocRecord.h
collection/runtime/tracking/: Memtracker.cpp  Memtracker.h  StaticTracker.cpp
collection/runtimetracker/: CMakeLists.txt  RuntimeTracker.cpp
collection/samples/: CMakeLists.txt
collection/samples/bankConflict/: CMakeLists.txt  bankConflict-0.trace.json  bankConflict.metadata.json  kernel-0.trace.json  kernel.metadata.json  run.json  source.cu
collection/samples/vectorAdd/: CMakeLists.txt  run.json  source.cu  vectorAdd-0.trace.gzip.json  vectorAdd-0.trace.gzip.protobuf  vectorAdd.metadata.json
collection/tests/: conftest.py  test_access.py  test_addrspace.py  test_allocations.py  test_general.py  test_instrument.py  test_metadata.py  test_parameters.py  test_trace.py
instrument/: CMakeLists.txt  Context.cpp  Context.h  Pass.cpp  Pass.h  RegisterPass.cpp  Store.cpp  Store.h
instrument/emit/: Kernel.cpp  Kernel.h  KernelLaunch.cpp  KernelLaunch.h  MemoryAccess.cpp  MemoryAccess.h  MemoryAlloc.cpp  MemoryAlloc.h  RuntimeEmitter.cpp  RuntimeEmitter.h
instrument/instrumentation/: KernelLaunch.cpp  KernelLaunch.h  MemoryAccess.cpp  MemoryAccess.h  RuntimeEmitter.cpp  RuntimeEmitter.h  Store.cpp  Store.h
instrument/memory/: MemoryAllocation.cpp  MemoryAllocation.h
instrument/util/: DebugExtractor.cpp  Demangler.h  FunctionUtils.cpp  FunctionUtils.h  StringUtils.cpp  StringUtils.h  Types.cpp  Types.h  Values.cpp  Values.h
runtime/: AccessRecord.h  AddressSpace.h  AllocRecord.h  CMakeLists.txt  CudaTimer.h  KernelContext.h  Runtime.h  StoreRecord.h  cudautil.h  format.h  prefix.h
schema/: alloc-record.proto  kernel-trace.proto  metadata.json  run.json  trace.capnp  warp.proto
static/css/: main.05b2893d.css  main.05b2893d.css.map  main.491519d0.css  main.491519d0.css.map  main.c25f8de8.css  main.c25f8de8.css.map  main.f30ffab5.css  main.f30ffab5.css.map
static/js/: main.1141661c.js  main.161b7a79.js  main.2d8c4911.js  main.4505b704.js  main.57978bf3.js  main.812cb980.js  main.85e1f25d.js  main.8c5a18ae.js  main.8e22c5de.js  main.d54c362d.js
tests/: conftest.py  test_access.py  test_addrspace.py  test_allocations.py  test_debug_info.py  test_instrument.py  test_metadata.py  test_parameters.py
thesis/: .gitignore  diploma.cls  prace.tex  references.bib
thesis/Kapitoly/: existujicinastroje.tex  grafickarozhrani.tex  instalace.tex  profilovacinastroj.tex  struktura.tex  technologie.tex  testovani.tex  uvod.tex  vizualizace.tex  zaver.tex
visualization/: .gitignore  README.md  package-lock.json  package.json  todo.txt  tsconfig.json  tslint.json
visualization/config/: paths.js  webpack.config.dev.js  webpack.config.prod.js
visualization/public/: index.html  protobuf.worker.js
visualization/scripts/: capnp-compile.js  protobuf.js
visualization/src/: App.css  App.scss  App.tsx  app.tsx  index.css  index.tsx  typings.d.ts
visualization/src/capnp/: cupr.capnp.ts
visualization/src/components/: global.scss
visualization/src/components/access-timeline/: access-timeline.tsx
visualization/src/components/content/: content.scss  content.tsx
visualization/src/protobuf/: bundle.d.ts  bundle.js
visualization/src/state/: epics.ts  errors.ts  reducers.ts  store.ts
visualization/src/test/: address.spec.ts  util.ts  warp.spec.ts
visualization/src/worker/: capnp.worker.ts  json.worker.ts  protobuf.worker.ts
(+146 files in other folders)
